change of code from some insperation I get from assignment B2

--- a/assignment_b1.Rmd
+++ b/assignment_b1.Rmd
@@ -42,14 +42,12 @@ In the same code chunk where you made your function, document the function using
 #' @return A data frame with grouped summaries, where each group is defined by
 #'         the specified grouping variables. The summary statistics for each
 #'         column are calculated based on the expressions provided.
-#'
-#' @export
+
 summarize_data <- function(data, group_vars, ...) {
-  summary_exprs <- enquos(...)
+  summary_exprs <- rlang::enquos(...)
   
-  result <- data %>%
-    group_by(across(all_of(group_vars), .names = "group")) %>%
-    summarise(!!!summary_exprs, .groups = "drop")
+  result <- dplyr::group_by(data, dplyr::across(dplyr::all_of(group_vars), .names = "group"))
+  result <- dplyr::summarise(result, !!!summary_exprs, .groups = "drop")
   
   return(result)
 }
